Bug 78444 - Repaint problem when using the Zapfino font.
Summary: Repaint problem when using the Zapfino font.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-08 14:52 UTC by Miklos Vajna
Modified: 2014-05-12 23:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
How it looks like currently. (10.25 KB, image/png)
2014-05-08 15:00 UTC, Miklos Vajna
Details
How it should look like. (11.08 KB, image/png)
2014-05-08 15:00 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2014-05-08 14:52:45 UTC
How to reproduce:

1) Either try this on OS X, or you need an installed Zapfino.ttf. (Sorry, I'm not aware of a free font that triggers this issue ATM.)

2) Open Writer.

3) Type "llll".

When you type the 4th "l", it's only painted partially, see the attached screenshot.

A workaround is to click on the header area, which triggers a repaint, and then it gets pained properly.
Comment 1 Miklos Vajna 2014-05-08 15:00:28 UTC
Created attachment 98695 [details]
How it looks like currently.
Comment 2 Miklos Vajna 2014-05-08 15:00:42 UTC
Created attachment 98696 [details]
How it should look like.
Comment 3 Commit Notification 2014-05-08 16:57:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0fd4cc8ba7335e33515413f54b19455b376d5db9

fdo#78444 sw: avoid incorrect right shrinking of repaint rectangle



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.