fdo#78444 sw: avoid incorrect right shrinking of repaint rectangle

The old condition was: set the right edge of the repaint rectangle, in
case the result would be wider than the original (if we repaint more,
that can't hurt regarding the end result) or in case the left edge was
set.

But that's problematic, the reproducer situation described in the bug
triggers a case when the right edge is shrunk too much, so part of the
painted letter is missing.

Fix that by only setting the right edge of the repaint rectangle when we
know that it won't shrink.

Change-Id: I33b78a929021b284d5283fc2c35e0b3c999fa224